# PyStarPSO

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: binh_korn.rst  conf.py  examples.rst  index.rst  modules.rst  one_max.rst  shubert_2d.rst  star_pso.benchmarks.rst  star_pso.engines.rst  star_pso.population.rst  star_pso.rst  star_pso.utils.rst
examples/: OneMax.ipynb  Travelling_Salesman_Problem.ipynb  benchmark_functions.ipynb  benchmark_summary_statistics.ipynb  binh_and_korn.ipynb  binh_and_korn_multiobjective.ipynb  categorical_pso.ipynb  gaussian_mixture_2D.ipynb  jack_of_all_trades.ipynb  one_max.ipynb  osyczka_kundu_multiobjective.ipynb  rosenbrock_on_a_disk.ipynb  shubert_2D.ipynb  sphere.ipynb  sum_abs.ipynb  tanaka.ipynb  tanaka_multiobjective.ipynb  test_Shubert_2D.ipynb  test_Shubert_2D_experiment_1.ipynb  test_benchmark.ipynb  test_binary_pso.ipynb  test_categorical_pso.ipynb  test_integer_pso.ipynb  test_jack_of_all_trades.ipynb  test_multimodal_1D.ipynb  test_multimodal_2D.ipynb  tsp.ipynb  zakharov.ipynb
experiments/: asymptotic_experiment.ipynb  benchmark_summary_statistics.ipynb
ppso/: particle.py
ppso/auxiliary/: particle.py  swarm.py  utilities.py
ppso/engines/: accelerated_pso.py  binary_pso.py  categorical_pso.py  generic_pso.py  integer_pso.py  standard_pso.py
star_pso/auxiliary/: data_block.py  jat_particle.py  particle.py  swarm.py  utilities.py
star_pso/benchmarks/: composite_functions.py  (+13 more)
tests/: test_data_block.py  test_jat_particle.py  test_particle.py  test_swarm.py  test_utilities.py
unittests/: test_auxiliary.py  test_binary_pso.py  test_data_block.py  test_generic_pso.py  test_integer_pso.py  test_jat_particle.py  test_particle.py  test_swarm.py
(+77 files in other folders)
