[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starpso"
version = "0.1.0"
description = "Particle Swarm Optimization algorithms toolbox in Python3"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [
    { name = "Michalis Vrettas, PhD", email = "michail.vrettas@gmail.com" }
]
keywords = ["optimization", "particle swarm intelligence", "algorithms"]
homepage = "https://github.com/vrettasm/PyStarPSO"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "joblib",
]

[tool.setuptools.packages.find]
exclude = ["docs", "unittests"]